chore: change package to public

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "repository": "github:thespielplatz/nuxt-dev-base",
   "license": "MIT",
+  "private": false,
   "type": "module",
   "exports": {
     ".": {
