chore: add all components to project

--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "typescript": "~5.7.3",
     "vitest": "^2.1.8",
     "vue-tsc": "^2.2.0"
-  }
+  },
+  "peerDependencies": {
+    "consola": "^3.3.3",
+    "defu": "^6.1.4"
+  }  
 }
