--- a/playground/package.json
+++ b/playground/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@nuxt/ui": "^2.21.0",
     "nuxt": "^3.15.2"
   }
 }
