--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@thespielplatz/nuxt-dev-base",
+  "homepage": "https://github.com/thespielplatz/nuxt-dev-base",
   "version": "0.0.1",
-  "description": "",
+  "description": "Development base module for Nuxt",
   "repository": "github:thespielplatz/nuxt-dev-base",
   "license": "MIT",
   "private": false,
   "type": "module",
+  "meta": {
+    "special-version": "0.0.1-for-testing"
+  },
   "exports": {
     ".": {
       "types": "./dist/types.d.ts",
@@ -30,7 +34,8 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.15.4"
+    "@nuxt/kit": "^3.15.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.7.0",
@@ -49,5 +54,5 @@
   "peerDependencies": {
     "consola": "^3.3.3",
     "defu": "^6.1.4"
-  }  
+  }
 }
