--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "homepage": "https://github.com/thespielplatz/nuxt-dev-base",
   "version": "1.0.1",
   "description": "Development base module for Nuxt",
-  "repository": "github:thespielplatz/nuxt-dev-base",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thespielplatz/nuxt-dev-base.git"
+  },
   "license": "MIT",
   "private": false,
   "type": "module",
