--- a/playground/package.json
+++ b/playground/package.json
@@ -8,7 +8,7 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
-    "@nuxt/ui": "^2.21.0",
-    "nuxt": "^3.15.2"
+    "@thespielplatz/nuxt-dev-base": "file:../",
+    "nuxt": "^3.15.4"
   }
 }
