--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.15.4",
-    "@nuxt/ui": "^2.21.0",
+    "@nuxt/ui": "^3.0.0-alpha.13",
     "consola": "^3.4.0",
     "defu": "^6.1.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^2.0.0",
-    "@nuxt/eslint-config": "^1.0.1",
+    "@nuxt/devtools": "^2.1.0",
+    "@nuxt/eslint-config": "^1.1.0",
     "@nuxt/module-builder": "^0.8.4",
     "@nuxt/schema": "^3.15.4",
     "@nuxt/test-utils": "^3.15.4",
@@ -57,7 +57,7 @@
     "eslint": "^9.20.1",
     "nuxt": "^3.15.4",
     "typescript": "~5.7.3",
-    "vitest": "^3.0.5",
-    "vue-tsc": "^2.2.0"
+    "vitest": "^3.0.6",
+    "vue-tsc": "^2.2.2"
   }
 }
