--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.15.4",
-    "@nuxt/ui": "^3.0.0-alpha.13",
+    "@nuxt/ui": "^3.0.0-beta.2",
     "consola": "^3.4.0",
     "defu": "^6.1.4",
     "zod": "^3.24.2"
