--- a/package.json
+++ b/package.json
@@ -40,24 +40,24 @@
     "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.15.4",
-    "@nuxt/ui": "^3.0.0-beta.2",
+    "@nuxt/kit": "^3.16.0",
+    "@nuxt/ui": "^3.0.0",
     "consola": "^3.4.0",
     "defu": "^6.1.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.1.0",
-    "@nuxt/eslint-config": "^1.1.0",
+    "@nuxt/eslint-config": "^1.2.0",
     "@nuxt/module-builder": "^0.8.4",
-    "@nuxt/schema": "^3.15.4",
-    "@nuxt/test-utils": "^3.15.4",
+    "@nuxt/schema": "^3.16.0",
+    "@nuxt/test-utils": "^3.17.2",
     "@types/node": "latest",
-    "changelogen": "^0.5.7",
-    "eslint": "^9.20.1",
-    "nuxt": "^3.15.4",
-    "typescript": "~5.7.3",
-    "vitest": "^3.0.6",
-    "vue-tsc": "^2.2.2"
+    "changelogen": "^0.6.1",
+    "eslint": "^9.22.0",
+    "nuxt": "^3.16.0",
+    "typescript": "~5.8.2",
+    "vitest": "^3.0.8",
+    "vue-tsc": "2.2.2"
   }
 }
